--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 
-<body>
+<body>   
     <section class="header">
         <div class="top-bar">
-            <span>Welcome to TDR Consultation services</span>
+            <span>Bienvenue sur TDR Consultation services</span>
             <div class="dropdown">
                 <select class="form-select d-inline-block w-auto" aria-label="Language select">
                     <option selected>English</option>
