--- a/services.html
+++ b/services.html
@@ -36,19 +36,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link"  href="#home">Accueil</a>
+                            <a class="nav-link"  href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="apropos.html">A Propos De Nous</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#services">Services</a>
+                            <a class="nav-link" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" >Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#footer">Contactez-Nous</a>
+                            <a class="nav-link" href="contactform.html">Contactez-Nous</a>
                         </li>
                     </ul>
                 </div>
