Translation and put of images in the services fill the card with right info

--- a/services.html
+++ b/services.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Consulting Agency</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="services.css">
-  
+
 </head>
+
 <body>
 
     <section class="header">
         <div class="top-bar">
-            <span>Welcome to TDR Consultation services</span>
+            <span>Bienvenue aux services de consultation du TDR Sarl</span>
             <div class="dropdown">
                 <select class="form-select d-inline-block w-auto" aria-label="Language select">
                     <option selected>English</option>
@@ -36,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link"  href="index.html">Accueil</a>
+                            <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="apropos.html">A Propos De Nous</a>
@@ -62,18 +64,20 @@
         <div class="container">
             <div class="row text-center mb-5">
                 <div class="col">
-                    <h1>Our Services</h1>
-                    <p>Discover the range of services we offer to help your business grow and succeed.</p>
+                    <h1>Nos Services</h1>
+                    <p>Le Cabinet « TDR Consulting Sarl » offre aux organisations une gamme de services
+                        adaptés, efficaces et économiques.</p>
                 </div>
             </div>
             <div class="row">
                 <!-- Service 1 -->
                 <div class="col-lg-4 col-md-6 services-card">
                     <div class="card h-100">
-                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Service 1">
+                        <img src="img/service1.jpg" class="card-img-top" alt="Service 1">
                         <div class="card-body">
-                            <h5 class="card-title">Business Consulting</h5>
-                            <p class="card-text">Expert advice to help you streamline operations and increase profitability.</p>
+                            <h5 class="card-title">Etudes statistiques et socioéconomiques</h5>
+                            <p class="card-text">Notre agence se spécialise dans les études statistiques et marketing,
+                                utilisant des logiciels spécifiques pour guider votre succès</p>
                             <a href="#" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
@@ -81,10 +85,11 @@
                 <!-- Service 2 -->
                 <div class="col-lg-4 col-md-6 services-card">
                     <div class="card h-100">
-                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Service 2">
+                        <img src="img/service2.jpg" class="card-img-top" alt="Service 2">
                         <div class="card-body">
-                            <h5 class="card-title">Financial Planning</h5>
-                            <p class="card-text">Comprehensive financial planning services to secure your future.</p>
+                            <h5 class="card-title">Ingénierie économique et financière</h5>
+                            <p class="card-text">Notre agence se concentre sur la maturation des projets, de
+                                l’élaboration des business plans à l’exécution et au suivi-évaluation.</p>
                             <a href="#" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
@@ -92,10 +97,12 @@
                 <!-- Service 3 -->
                 <div class="col-lg-4 col-md-6 services-card">
                     <div class="card h-100">
-                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Service 3">
+                        <img src="img/service3.jpg" class="card-img-top" alt="Service 3">
                         <div class="card-body">
-                            <h5 class="card-title">Market Research</h5>
-                            <p class="card-text">In-depth market research to help you make informed business decisions.</p>
+                            <h5 class="card-title">Ingénierie informatique</h5>
+                            <p class="card-text">Notre service se concentre sur le développement de sites web, de
+                                logiciels personnalisés et sur les systèmes d’information géographique et la
+                                cartographie.</p>
                             <a href="#" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
@@ -103,10 +110,12 @@
                 <!-- Service 4 -->
                 <div class="col-lg-4 col-md-6 services-card">
                     <div class="card h-100">
-                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Service 4">
+                        <img src="img/service4.jpg" class="card-img-top" alt="Service 4">
                         <div class="card-body">
-                            <h5 class="card-title">IT Consulting</h5>
-                            <p class="card-text">Tailored IT solutions to improve efficiency and support your growth.</p>
+                            <h5 class="card-title">Ingénierie et management des projets</h5>
+                            <p class="card-text">Ce module enseigne les bases de la création de manuels de procédures et
+                                d'exécution de projets, essentielles pour la gestion et la planification des activités
+                                d'une entreprise.</p>
                             <a href="#" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
@@ -114,10 +123,13 @@
                 <!-- Service 5 -->
                 <div class="col-lg-4 col-md-6 services-card">
                     <div class="card h-100">
-                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Service 5">
+                        <img src="img/service5.jpg" class="card-img-top" alt="Service 5">
                         <div class="card-body">
-                            <h5 class="card-title">Human Resources</h5>
-                            <p class="card-text">Comprehensive HR services to manage and optimize your workforce.</p>
+                            <h5 class="card-title">Etudes et audits d'impact environnemental et social</h5>
+                            <p class="card-text">
+                                Nous offrons des services d'études et d'audits d'impact environnemental et social,
+                                essentiels pour évaluer et minimiser les effets de vos projets sur l'environnement et
+                                les communautés locales.</p>
                             <a href="#" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
@@ -125,10 +137,12 @@
                 <!-- Service 6 -->
                 <div class="col-lg-4 col-md-6 services-card">
                     <div class="card h-100">
-                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Service 6">
+                        <img src="img/service6.jpg" class="card-img-top" alt="Service 6">
                         <div class="card-body">
-                            <h5 class="card-title">Risk Management</h5>
-                            <p class="card-text">Identifying and managing potential risks to safeguard your business.</p>
+                            <h5 class="card-title">Formation Continue/Appui conseil</h5>
+                            <p class="card-text">Nous proposons des services de formation continue et d'appui-conseil,
+                                conçus pour renforcer les compétences et accompagner les entreprises dans l'optimisation
+                                de leurs performances et de leur développement.</p>
                             <a href="#" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
@@ -140,7 +154,7 @@
     <!-- Footer -->
     <footer class="footer bg-dark text-white text-center py-3">
         <div class="container">
-            <p>&copy; 2024 Consulting Agency. All rights reserved.</p>
+            <p>&copy; 2024 TDR Consulting Sarl. All rights reserved.</p>
         </div>
     </footer>
 
@@ -149,4 +163,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
