--- a/apropos.html
+++ b/apropos.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Consulting Agency</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="apropos.css">
- 
+
 </head>
+
 <body>
     <section class="header">
         <div class="top-bar">
@@ -35,7 +37,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link"  href="index.html">Accueil</a>
+                            <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="apropos.html">A Propos De Nous</a>
@@ -44,7 +46,7 @@
                             <a class="nav-link" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blog.html" >Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contactform.html">Contactez-Nous</a>
@@ -63,12 +65,18 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 about-text">
                     <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris.</p>
-                    <p>Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero.</p>
-                    <p>Consulting Agency is committed to delivering exceptional consulting services that drive growth and success for our clients. Our team of experienced professionals is dedicated to providing innovative solutions tailored to meet the unique needs of each client.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed
+                        cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis
+                        ipsum. Praesent mauris.</p>
+                    <p>Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class
+                        aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur
+                        sodales ligula in libero.</p>
+                    <p>Consulting Agency is committed to delivering exceptional consulting services that drive growth
+                        and success for our clients. Our team of experienced professionals is dedicated to providing
+                        innovative solutions tailored to meet the unique needs of each client.</p>
                 </div>
 
-<div class="col-lg-6 about-image">
+                <div class="col-lg-6 about-image">
                     <img src="img/background.jpeg" alt="About Us">
                 </div>
 
@@ -76,7 +84,8 @@
             <div class="row mb-5">
                 <div class="col-lg-6">
                     <h2>Our Goals</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed
+                        cursus ante dapibus diam.</p>
                     <ul>
                         <li>Delivering top-notch consulting services.</li>
                         <li>Driving measurable growth for clients.</li>
@@ -85,13 +94,15 @@
                 </div>
                 <div class="col-lg-6">
                     <h2>Our Mission</h2>
-                    <p>Our mission is to empower businesses with the insights and strategies needed to achieve their fullest potential.</p>
+                    <p>Our mission is to empower businesses with the insights and strategies needed to achieve their
+                        fullest potential.</p>
                 </div>
             </div>
             <div class="row mb-5">
                 <div class="col-lg-6">
                     <h2>Experience</h2>
-                    <p>With over 20 years of experience in the consulting industry, our team has a proven track record of success.</p>
+                    <p>With over 20 years of experience in the consulting industry, our team has a proven track record
+                        of success.</p>
                 </div>
                 <div class="col-lg-6">
                     <h2>Our Objectives</h2>
@@ -118,4 +129,5 @@
     <script src="js/all.js"></script>
 
 </body>
+
 </html>
