Making the nav visible across all pages, corrrecting and documenting the page in frrench

--- a/blog.html
+++ b/blog.html
@@ -2,11 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact - TDR Consulting</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="blog.css">
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 </head>
 <body>
-    <h1>Still to be coded</h1>
-    <h2>There's nothing wrong with this page the code is still be written </h2>
+    <section class="header">
+        <div class="top-bar">
+            <span>Bienvenue aux services de consultation du TDR Sarl</span>
+            <div class="dropdown">
+                <select class="form-select d-inline-block w-auto" aria-label="Language select">
+                    <option selected>English</option>
+                    <option value="1">French</option>
+                </select>
+            </div>
+
+            <!-- ----------Top bar--------->
+            <div class="top-bar-icons">
+                <i class="fa-sharp fa-solid fa-envelope"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+        </div>
+
+        <!-- -----------nav bar---------------- -->
+        <nav class="navbar navbar-expand-lg  ">
+            <div class="container-fluid">
+                <img src="img/logo.jpg" alt="" class="logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"> <i class="fas fa-bars menu icons"></i> </span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link " href="index.html">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="apropos.html">A Propos De Nous</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link tapcolor" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="contactform.html">Contactez-Nous</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    </section>
 </body>
 </html>
