--- a/apropos.html
+++ b/apropos.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Consulting Agency</title>
+    <title>A Propos - TDR Consulting</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="apropos.css">
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
+
 
 </head>
 
 <body>
     <section class="header">
         <div class="top-bar">
-            <span>Welcome to TDR Consultation services</span>
+            <span>Bienvenue aux services de consultation du TDR Sarl</span>
             <div class="dropdown">
                 <select class="form-select d-inline-block w-auto" aria-label="Language select">
                     <option selected>English</option>
@@ -40,7 +42,7 @@
                             <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="apropos.html">A Propos De Nous</a>
+                            <a class="nav-link tapcolor" href="apropos.html">A Propos De Nous</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="services.html">Services</a>
@@ -65,15 +67,10 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 about-text">
                     <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed
-                        cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis
-                        ipsum. Praesent mauris.</p>
-                    <p>Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class
-                        aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur
-                        sodales ligula in libero.</p>
-                    <p>Consulting Agency is committed to delivering exceptional consulting services that drive growth
-                        and success for our clients. Our team of experienced professionals is dedicated to providing
-                        innovative solutions tailored to meet the unique needs of each client.</p>
+                    <p>Chez TDR Consulting SARL, nous sommes une équipe de consultants passionnés et expérimentés dédiés à aider les entreprises de toutes tailles à atteindre leurs objectifs. Nous combinons notre connaissance approfondie de l'industrie avec des stratégies innovantes pour fournir des solutions sur mesure qui stimulent la croissance et le succès.</p>
+                    <p>Notre structure SARL (Société à Responsabilité Limitée) garantit la transparence et la responsabilité, vous donnant ainsi la tranquillité d'esprit de travailler avec un partenaire fiable. Nous sommes engagés à bâtir des relations solides avec nos clients, en prenant le temps de comprendre leurs besoins et défis uniques</p>
+                    <p>Que vous soyez une startup cherchant des conseils ou une entreprise établie cherchant à porter vos opérations au niveau supérieur, TDR Consulting SARL a l'expertise et les ressources pour vous aider à atteindre vos aspirations.</p>
+                    
                 </div>
 
                 <div class="col-lg-6 about-image">
