--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- ---------------Header section----------- -->
+    <!-----------------Header section------------->
 
     <section class="header">
         <div class="top-bar">
@@ -45,19 +45,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#home">Accueil</a>
+                            <a class="nav-link tapcolor" href="#home">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="apropos.html">A Propos De Nous</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#services">Services</a>
+                            <a class="nav-link" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#footer">Contactez-Nous</a>
+                            <a class="nav-link" href="contactform.html">Contactez-Nous</a>
                         </li>
                     </ul>
                 </div>
@@ -73,8 +73,8 @@
         <div class="container">
             <div class="text">
                 <h1>Réservez votre <span>consultation</span></h1>
-                <p>“Nous sommes une agence de conseil spécialisée dans l’optimisation des stratégies d’entreprise.<br>
-                    Notre expertise vous guide vers le succès.” <br>
+                <p>Nous sommes une agence de conseil spécialisée dans l’optimisation des stratégies d’entreprise.<br>
+                    Notre expertise vous guide vers le succès.<br>
                 </p>
             </div>
             <div class="button">
@@ -169,7 +169,7 @@
     <!-- ------------------Partner section--------------- -->
     <section class="partners" id="partners">
         <div class="heading text-center">
-            <h1> They Trust Us </h1>
+            <h1>Ils nous font confiance!</h1>
         </div>
         <div class="container">
             <div class="swiper-container">
@@ -199,7 +199,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo3.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -210,7 +210,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo4.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -221,7 +221,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo5.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -232,7 +232,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo6.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -243,7 +243,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo7.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -254,7 +254,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo8.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -265,7 +265,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo9.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -276,7 +276,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo10.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -287,7 +287,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo11.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -298,7 +298,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo12.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -309,7 +309,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo13.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -320,7 +320,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo14.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -331,7 +331,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo15.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -342,7 +342,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo16.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -353,7 +353,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo17.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -364,7 +364,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo18.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -375,7 +375,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo19.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -386,7 +386,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo20.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -397,7 +397,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo21.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -408,7 +408,7 @@
                     <div class="swiper-slide">
                         <div class="box">
                             <div class="partner-logo">
-                                <div class="swiper-slide partner-logo"><img src="img/partners/logo1.png" alt="Logo 1">
+                                <div class="swiper-slide partner-logo"><img src="img/partners/logo22.png" alt="Logo 1">
                                 </div>
                             </div>
                             <h2>Name</h2>
@@ -427,11 +427,8 @@
             <div class="footer-col">
                 <h4>TDR CONSULTING SARL</h4>
                 <ul class="links">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Compressions</a></li>
-                    <li><a href="#">Customers</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Collection</a></li>
+                    <li> Nous sommes engagés à fournir un<br> service exceptionnel et à dépasser <br> vos attentes. Contactez-nous aujourd'hui <br> pour planifier une consultation gratuite<br> et discuter de la façon dont nous pouvons <br>aider votre entreprise à prospérer.</li>
+                    
                 </ul>
             </div>
 
@@ -455,10 +452,10 @@
                     <li><a href="#">Email: cabinet.tdr.consulting@gmail.com</a></li>
                 </ul>
                 <div class="icons">
-                    <i class="fa-brands fa-facebook-f icon"></i>
-                    <i class="fa-sharp fa-solid fa-envelope icon"></i>
-                    <i class="fa-brands fa-linkedin icon"></i>
-                    <i class="fa-brands fa-whatsapp icon"></i>
+                    <a href=""><i class="fa-brands fa-facebook-f icon"></i></a>
+                    <a href="mailto:cabinet.tdr.consulting@gmail.com"><i class="fa-sharp fa-solid fa-envelope icon"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin icon"></i></a>
+                    <a href=""><i class="fa-brands fa-whatsapp icon"></i></a>
                 </div>
             </div>
         </div>
