--- a/services.html
+++ b/services.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - Consulting Agency</title>
+    <title>Services - TDR Consulting</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="services.css">
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
+
 
 </head>
 
@@ -28,7 +30,7 @@
             </div>
         </div>
 
-        <nav class="navbar navbar-expand-lg  ">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <img src="img/logo.jpg" alt="" class="logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -44,7 +46,7 @@
                             <a class="nav-link" href="apropos.html">A Propos De Nous</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="services.html">Services</a>
+                            <a class="nav-link tapcolor" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="blog.html">Blog</a>
