linkedup the different pages of the website

--- a/index.html
+++ b/index.html
@@ -318,10 +318,17 @@
                     <li><a href="#">Email:</a></li>
                 </ul>
                 <div class="icons">
-                    <i class="fa-brands fa-facebook-f icon"></i>
-                    <i class="fa-sharp fa-solid fa-envelope icon"></i>
-                    <i class="fa-brands fa-linkedin icon"></i>
-                    <i class="fa-brands fa-whatsapp icon"></i>
+                    <a href=" https://www.facebook.com/tdrconsultingsarl" target="_blank" title="Follow us on Facebook"> 
+                    <i class="fa-brands fa-facebook-f icon"></i></a>
+                    <a href="mailto:cabinet.tdr.consulting@gmail.com" target="_blank" title="Send us an email">
+                    <i class="fa-sharp fa-solid fa-envelope icon"></i></a>
+                    <a href="https://www.linkedin.com/company/tdr-consuling-sarl/" target="_blank" title="Connect with us on LinkedIn">
+                    <i class="fa-brands fa-linkedin icon"></i></a>
+
+                    <a href="https://wa.me/+237656233727" target="_blank" title="Chat with us on WhatsApp">
+                        <i class="fa-brands fa-whatsapp icon"></i>
+                    </a>
+                    
                 </div>
             </div>
         </div>
