--- a/blog.html
+++ b/blog.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - TDR Consulting</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="blog.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - TDR Consulting</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="blog.css">
     <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 </head>
-<body>
-    <section class="header">
-        <div class="top-bar">
-            <span>Bienvenue aux services de consultation du TDR Sarl</span>
-            <div class="dropdown">
-                <select class="form-select d-inline-block w-auto" aria-label="Language select">
-                    <option selected>English</option>
-                    <option value="1">French</option>
-                </select>
-            </div>
 
-            <!-- ----------Top bar--------->
+<body>
+    <div class="header">
+        <div class="top-bar">
+            <span class="fw-medium">Bienvenue aux services de consultation du TDR Sarl</span>
+
+            <!-- Top bar -->
             <div class="top-bar-icons">
-                <i class="fa-sharp fa-solid fa-envelope"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-linkedin"></i>
+                <i class="bi bi-envelope-at-fill"></i>
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-linkedin"></i>
             </div>
         </div>
 
-        <!-- -----------nav bar---------------- -->
+        <!-- nav bar -->
         <nav class="navbar navbar-expand-lg  ">
             <div class="container-fluid">
                 <img src="img/logo.jpg" alt="" class="logo">
@@ -39,25 +36,80 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link " href="index.html">Accueil</a>
+                            <a class="nav-link " href="index.html"><i class="bi bi-house-fill"></i> Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="apropos.html">A Propos De Nous</a>
+                            <a class="nav-link" href="apropos.html"><i class="bi bi-people-fill"></i> A Propos De
+                                Nous</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="services.html">Services</a>
+                            <a class="nav-link" href="services.html"><i class="bi bi-card-text"></i> Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link tapcolor" href="#">Blog</a>
+                            <a class="nav-link tapcolor" href="#"><i class="bi bi-journal-bookmark-fill"></i> Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="contactform.html">Contactez-Nous</a>
+                            <a class="nav-link " href="contactform.html"><i class="bi bi-telephone-fill"></i>
+                                Contactez-Nous</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-    </section>
+    </div>
+
+
+    <div class="container">
+        <h1 class="blog-title text-secondary">Nos dernières informations</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="img/blog1.jpg" class="card-img-top" alt="Blog-Image-1">
+                    <div class="card-body">
+                        <h5 class="card-title">Blog Post Title 1</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac orci sed
+                            orci euismod tincidunt.</p>
+                        <!-- <a href="#" class="btn btn-primary">Read More</a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="img/blog2.jpg" class="card-img-top" alt="Blog-Image-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Blog Post Title 2</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac orci sed
+                            orci euismod tincidunt.</p>
+                        <!-- <a href="#" class="btn btn-primary">Read More</a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="img/blog3.jpg" class="card-img-top" alt="Blog-Image-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Blog Post Title 3</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac orci sed
+                            orci euismod tincidunt.</p>
+                        <!-- <a href="#" class="btn btn-primary">Read More</a> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer section -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 TDR Consulting Sarl. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
