--- a/apropos.html
+++ b/apropos.html
@@ -18,9 +18,9 @@
         <div class="top-bar">
             <span class="fw-medium">Bienvenue aux services de consultation du TDR Sarl</span>
             <div class="top-bar-icons">
-                <i class="bi bi-envelope-at-fill"></i>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-linkedin"></i>
+                <a href="mailto:cabinet.tdr.consulting@gmail.com"><i class="bi bi-envelope-at-fill"></i></a>
+               <a href="https://www.facebook.com/share/wyy9BJZTiQ34b3Mn/?mibextid=qi2Omg"><i class="bi bi-facebook"></i> </a> 
+                <a href="https://www.linkedin.com/company/tdr-consuling-sarl/"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
 
