--- a/services.html
+++ b/services.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +9,6 @@
     <link rel="stylesheet" href="services.css">
     <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 
-
 </head>
 
 <body>
@@ -19,10 +17,10 @@
         <div class="top-bar">
             <span class="fw-medium">Bienvenue aux services de consultation du TDR Sarl</span>
 
-            <div class="top-bar-icons">
-                <i class="bi bi-envelope-at-fill"></i>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-linkedin"></i>
+             <div class="top-bar-icons">
+                <a href="mailto:cabinet.tdr.consulting@gmail.com"><i class="bi bi-envelope-at-fill"></i></a>
+               <a href="https://www.facebook.com/share/wyy9BJZTiQ34b3Mn/?mibextid=qi2Omg"><i class="bi bi-facebook"></i> </a> 
+                <a href="https://www.linkedin.com/company/tdr-consuling-sarl/"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
 
@@ -131,7 +129,7 @@
                                 Nous offrons des services d'études et d'audits d'impact environnemental et social,
                                 essentiels pour évaluer et minimiser les effets de vos projets sur l'environnement et
                                 les communautés locales.</p>
-                            <a href="#" class="btn btn-primary">Détails</a>
+                            <a href="#card-four" class="btn btn-primary">Détails</a>
                         </div>
                     </div>
                 </div>
@@ -144,7 +142,7 @@
                             <p class="card-text">Nous proposons des services de formation continue et d'appui-conseil,
                                 conçus pour renforcer les compétences et accompagner les entreprises dans l'optimisation
                                 de leurs performances et de leur développement.</p>
-                            <a href="#" class="btn btn-primary">Détails</a>
+                            <a href="#card-four" class="btn btn-primary">Détails</a>
                         </div>
                     </div>
                 </div>
