--- a/blog.html
+++ b/blog.html
@@ -18,10 +18,10 @@
             <span class="fw-medium">Bienvenue aux services de consultation du TDR Sarl</span>
 
             <!-- Top bar -->
-            <div class="top-bar-icons">
-                <i class="bi bi-envelope-at-fill"></i>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-linkedin"></i>
+             <div class="top-bar-icons">
+                <a href="mailto:cabinet.tdr.consulting@gmail.com"><i class="bi bi-envelope-at-fill"></i></a>
+               <a href="https://www.facebook.com/share/wyy9BJZTiQ34b3Mn/?mibextid=qi2Omg"><i class="bi bi-facebook"></i> </a> 
+                <a href="https://www.linkedin.com/company/tdr-consuling-sarl/"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
 
@@ -67,33 +67,30 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/blog1.jpg" class="card-img-top" alt="Blog-Image-1">
+                    <img src="img/blog-img1.jpg" class="card-img-top" alt="Blog-Image-1">
                     <div class="card-body">
-                        <h5 class="card-title">Blog Post Title 1</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac orci sed
-                            orci euismod tincidunt.</p>
+                        <h5 class="card-title">Formation Certifiante en Statistique</h5>
+                        <p class="card-text"> Développer les aptitudes des participants aux techniques de collecte, de traitement et d’analyse de données statistiques pour un développement soutenu et durable.</p>
                         <!-- <a href="#" class="btn btn-primary">Read More</a> -->
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/blog2.jpg" class="card-img-top" alt="Blog-Image-2">
+                    <img src="img/blog-img2.jpg" class="card-img-top" alt="Blog-Image-2">
                     <div class="card-body">
-                        <h5 class="card-title">Blog Post Title 2</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac orci sed
-                            orci euismod tincidunt.</p>
+                        <h5 class="card-title">Etude conduite par le Cabinet TDR Consulting Sarl</h5>
+                        <p class="card-text">Atelier de restitution des résultats de l’Etude Stratégique Pour La Mise En Place Du Système Permanent et Integre des statistiques Agropastorales Pour le Compte de Recensement General De L’Agriculture et de L’Elevage</p>
                         <!-- <a href="#" class="btn btn-primary">Read More</a> -->
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/blog3.jpg" class="card-img-top" alt="Blog-Image-3">
+                    <img src="img/blog-img3.jpg" class="card-img-top" alt="Blog-Image-3">
                     <div class="card-body">
-                        <h5 class="card-title">Blog Post Title 3</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac orci sed
-                            orci euismod tincidunt.</p>
+                        <h5 class="card-title">Partenariat gagnant-gagnant TDR Consulting Sarl--𝐄𝐗𝐏𝐄𝐑𝐓𝟑𝐃𝐄𝐕 𝐒𝐀𝐑𝐋--𝐂𝐄𝐑𝐃</h5>
+                        <p class="card-text">Notre partenariat avec l'entreprise EXPERT3DEV SARL qui a mis sur pied un logiciel MATRIIX ERP qui au-delà d’un simple logiciel, est un progiciel calqué sur les spécificités et les réalités des entreprises Camerounaises et de la sous région Afrique Centrale.</p>
                         <!-- <a href="#" class="btn btn-primary">Read More</a> -->
                     </div>
                 </div>
