--- a/contactform.html
+++ b/contactform.html
@@ -20,10 +20,10 @@
       <span class="fw-medium">Bienvenue aux services de consultation du TDR Sarl</span>
     
       <!-- Top bar -->
-      <div class="top-bar-icons">
-                <i class="bi bi-envelope-at-fill"></i>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-linkedin"></i>
+       <div class="top-bar-icons">
+                <a href="mailto:cabinet.tdr.consulting@gmail.com"><i class="bi bi-envelope-at-fill"></i></a>
+               <a href="https://www.facebook.com/share/wyy9BJZTiQ34b3Mn/?mibextid=qi2Omg"><i class="bi bi-facebook"></i> </a> 
+                <a href="https://www.linkedin.com/company/tdr-consuling-sarl/"><i class="bi bi-linkedin"></i></a>
             </div>
     </div>
 
