--- a/index.html
+++ b/index.html
@@ -429,52 +429,47 @@
 
     <!-- Footer Section -->
     <section class="footer" id="footer">
-        <div class="footer-row">
-            <div class="footer-col">
-                <h4>TDR CONSULTING SARL</h4>
-                <ul class="links">
-                    <li> Nous sommes engagés à fournir un<br> service exceptionnel et à dépasser <br> vos attentes.
-                        Contactez-nous aujourd'hui <br> pour planifier une consultation gratuite<br> et discuter de la
-                        façon dont nous pouvons <br>aider votre entreprise à prospérer.</li>
-                </ul>
-            </div>
+    <div class="footer-row">
+        <div class="footer-col">
+            <h4>TDR CONSULTING SARL</h4>
+            <ul class="links">
+                <li>Nous sommes engagés à fournir un<br> service exceptionnel et à dépasser <br> vos attentes.
+                    Contactez-nous aujourd'hui <br> pour planifier une consultation gratuite<br> et discuter de la
+                    façon dont nous pouvons <br>aider votre entreprise à prospérer.</li>
+            </ul>
+        </div>
 
-            <div class="footer-col uptiimum">
-                <div class="d-flex">
-                    <img src="img/uptiimum.png" class="rounded-circle" alt="uptiimum">
-                    <h2 class="my-4 text-white">UPTIIMUM ERP</h2>
-                </div>
-                <ul class="links">
-                    <li><a href="https://uptiimum.tech/#home">LOGICIEL DE GESTION HOSPITALIERE</a></li>
-                    <li><a href="https://uptiimum.tech/#home">Uptiimum Erp, offre une solution efficace de gestion de toutes les activités de votre établissement de santé.</a></li>
-                    <li class="text-end"><a href="https://uptiimum.tech/#home"> <button type="button" class="btn btn-info">En savoir plus</button></a></li>
-                </ul>
+        <div class="footer-col uptiimum">
+            <div class="d-flex">
+                <img src="img/uptiimum.png" class="rounded-circle" alt="uptiimum">
+                <h2 class="my-4 text-white">UPTIIMUM ERP</h2>
             </div>
-            <div class="footer-col">
-                <h4>Contactez-Nous</h4>
-                <ul class="links">
-                    <li>Siège, Yaoundé, Carrefour Biyem-Assi, immeuble afriland first bank.
-                        </li>
-                    <li>Telephone: +237 650 39 28 76 - 656 23 37 27. </li>
-                    <li><a href="mailto:cabinet.tdr.consulting@gmail.com">Email: cabinet.tdr.consulting@gmail.com</a></li>
-                </ul>
-                <div class="icons">
-                    <a href="https://www.facebook.com/share/wyy9BJZTiQ34b3Mn/?mibextid=qi2Omg"><i
-                            class="fa-brands fa-facebook-f icon"></i></a>
-                    <a href="mailto:cabinet.tdr.consulting@gmail.com"><i
-                            class="fa-sharp fa-solid fa-envelope icon"></i></a>
-                    <a href="https://www.linkedin.com/company/tdr-consuling-sarl/"><i
-                            class="fa-brands fa-linkedin icon"></i></a>
-                    <a href="https://wa.me/671307052/"><i class="fa-brands fa-whatsapp icon"></i></a>
-                </div>
+            <ul class="links">
+                <li><a href="https://uptiimum.tech/#home">LOGICIEL DE GESTION HOSPITALIERE</a></li>
+                <li><a href="https://uptiimum.tech/#home">Uptiimum Erp, offre une solution efficace de gestion de toutes les activités de votre établissement de santé.</a></li>
+                <li class="text-end"><a href="https://uptiimum.tech/#home"><button type="button" class="btn btn-info">En savoir plus</button></a></li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>Contactez-Nous</h4>
+            <ul class="links">
+                <li>Siège, Yaoundé, Carrefour Biyem-Assi, immeuble afriland first bank.</li>
+                <li>Telephone: +237 650 39 28 76 - 656 23 37 27.</li>
+                <li><a href="mailto:cabinet.tdr.consulting@gmail.com">Email: cabinet.tdr.consulting@gmail.com</a></li>
+            </ul>
+            <div class="icons">
+                <a href="https://www.facebook.com/share/wyy9BJZTiQ34b3Mn/?mibextid=qi2Omg"><i class="fa-brands fa-facebook-f icon"></i></a>
+                <a href="mailto:cabinet.tdr.consulting@gmail.com"><i class="fa-sharp fa-solid fa-envelope icon"></i></a>
+                <a href="https://www.linkedin.com/company/tdr-consuling-sarl/"><i class="fa-brands fa-linkedin icon"></i></a>
+                <a href="https://wa.me/671307052/"><i class="fa-brands fa-whatsapp icon"></i></a>
             </div>
         </div>
-        <a href="#home"><button type="button" class="btn btn-outline-info" id="fixedElement"><i class="bi bi-arrow-up"></i></button></a>
-        <div class="card-footer text-muted">
-            <p>2024 &copy; TDR Consulting SARL. Made with <i class="fas fa-heart" style="color: red;"></i> by
-                TDR Dev Team.</p>
-        </div>
-    </section>
+    </div>
+    <a href="#home"><button type="button" class="btn btn-outline-info" id="fixedElement"><i class="bi bi-arrow-up"></i></button></a>
+    <div class="card-footer text-muted">
+        <p>2024 &copy; TDR Consulting SARL. Made with <i class="fas fa-heart" style="color: red;"></i> by TDR Dev Team.</p>
+    </div>
+</section>
 
     <!-- script files and links -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
